# papers

./: .gitignore  README.md  references.bib
3d_causal_growth/: authors.json  hqiv_3d_causal_growth_octonionic_gauge.tex
baryogenesis_lockin/: README.md  authors.json  hqiv_baryogenesis_curvature_lockin.tex
bbn/: README.md  authors.json  hqiv_bbn_light_elements_from_network_weights.tex
bbn/scripts/: MANIFEST.sha256  README.md  check_fano_mass_coherence.py  fragment_aware_bonded_horizon.py  hqiv_bbn_abundances.py  hqiv_bbn_epoch_network.py  hqiv_bbn_integrator.py  hqiv_bond_state_network.py  hqiv_curvature_binding_core.py  hqiv_curvature_bond_state.py  hqiv_curvature_information_ontology.py  hqiv_derived_chemistry.py  hqiv_dynamic_beta_isotope.py  hqiv_dynamic_nucleon_pn.py  hqiv_excited_states.py  hqiv_homogeneous_curvature_feedback.py  hqiv_integrator_lean_audit.py  hqiv_lean_physics_primitives.py  hqiv_post_alpha_sphere_touching.py  hqiv_scale_witness.py  hqiv_shell_shape_geometry.py  pyproject.toml  test_hqiv_bbn_epoch_network.py  test_hqiv_dynamic_c2_bbn.py
bbn/scripts/data/: bbn_integrator.json  bbn_paper_tables.json  bbn_witnesses.json  curvature_binding_program.json
closure/: authors.json  closure.tex  so8_closure_full_appendix.tex
compact_object_witness/: DYNAMICS_TARGET.md  LAGRANGIAN_FAITHFULNESS_AUDIT.md  MHD_EQUIVALENCE_MAP.md  PAPER_DYNAMICS_SECTION.md  README.md  hqiv_compact_object_crust_mhd_equivalence.tex  regenerate_data.sh
complex_time_stokes_bridge/: authors.json  hqiv_complex_time_stokes_from_lattice.tex
coronal_heating/: authors.json  (+1 more)
(+287 files in other folders)
